@@ -59,6 +59,7 @@ Bugs fixed
 * #2521: generated Makefile causes BSD make crashed if sphinx-build not found
 * #2470: ``typing`` backport package causes autodoc errors with python 2.7
 * ``sphinx.ext.intersphinx`` crashes if non-string value is used for key of `intersphinx_mapping`
+* #2518: `intersphinx_mapping` disallows non alphanumeric keys
 
 
 Release 1.4.1 (released Apr 12, 2016)
